<resources>
    <string name="app_name">Notes</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="about">About</string>
    <string name="home">home</string>
    <string name="note">Note</string>
    <string name="notes">Notes</string>
    <string name="add_note">Add note</string>
    <string name="delete_note">Delete note</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="app_info_image">App info image</string>
    <string name="app_info">App info</string>
    <string name="app_description">Here will be app description</string>
    <string name="note_date">Note date</string>
    <string name="description">Description</string>
    <string name="date">Date</string>
    <string name="title">Title</string>
    <string name="alert_question_delete_note">Are you really want to delete the note \'%s\'?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
</resources>